[package]
name = "{{project-name}}"
version = "0.0.1"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/saona-raimundo/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
homepage = "https://crates.io/crates/{{project-name}}"
# description = ""
# keywords = [""]
# categories = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
